# camera-control

./: README.md
settings/: client.ini  server.ini
src/: CMakeLists.txt
src/client/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  main.cpp
src/server/: AsyncTcpServer.cpp  AsyncTcpServer.h  CMakeLists.txt  Camera.h  CommandsDiodColor.cpp  CommandsDiodColor.h  CommandsDiodFreq.cpp  CommandsDiodFreq.h  CommandsDiodState.cpp  CommandsDiodState.h  Data.h  DiodColor.cpp  DiodColor.h  DiodFrequency.cpp  DiodFrequency.h  DiodState.cpp  DiodState.h  ICommand.h  Server.cpp  Server.h  main.cpp
