cmake_minimum_required(VERSION 3.13)
project(camera-control-client CXX)
set(CMAKE_CXX_STANDARD 14)
set(BOOST_ROOT /opt/boost)
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost COMPONENTS system)
include_directories(${Boost_INCLUDE_DIR})
add_executable(camera-control-client main.cpp TcpClient.cpp)
target_link_libraries(camera-control-client ${Boost_LIBRARIES} pthread)
configure_file(../../settings/client.ini client.ini COPYONLY)
